raffia/tests/error/at-rule/media/unmatched-braces.snap
---
source: raffia/tests/error.rs
---
error: expect token `}`, but found `<eof>`
  ┌─ unmatched-braces.css:5:1
  │
5 │ 
  │ ^


